fixing the no results search message on mobile2

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -348,6 +348,8 @@ input[name='q']::placeholder {
     .carousel-control-prev {
         left: -5px;
     }
+
+
 }
 
 @media (min-width: 1440px) {
@@ -382,6 +384,8 @@ input[name='q']::placeholder {
     .carousel-control-prev {
         left: -5px;
     }
+
+
 }
 
 @media (min-width: 1200px) {
@@ -787,6 +791,11 @@ input[name='q']::placeholder {
 
     input .buttons {
         margin-bottom: 1rem;
+    }
+
+    .no-results p {
+        font-size: 1.2rem !important;
+
     }
 }
 
@@ -1718,6 +1727,6 @@ input[name='q']::placeholder {
 }
 
 .no-results p {
-    margin-left: 28rem;
     font-size: 1.3rem;
+
 }
